# tai

./: .gitattributes  Cargo.toml  README.EN.md  README.md  README.zh-CN.md  termimad.md  test_response.md
.cursor/skills/tai-architecture/: SKILL.md
.cursor/skills/tai-history-management/: SKILL.md
.cursor/skills/tai-markdown-rendering/: SKILL.md
.cursor/skills/tai-rust-best-practices/: SKILL.md
assets/: providers copy.json  providers.json  test_reasoning.md  test_response.md
crates/tai-ai/: Cargo.toml
crates/tai-ai/src/: config.rs  lib.rs  provider.rs
crates/tai-command/: Cargo.toml
crates/tai-command/src/: ask.rs  config.rs  do.rs  do_ask.rs  go.rs  init.rs  lib.rs  model.rs  provider.rs
crates/tai-command/src/ask/: history.rs
crates/tai-core/: Cargo.toml
crates/tai-core/src/: config.rs  error.rs  lib.rs  logging.rs
crates/tai-pty/: Cargo.toml
crates/tai-tui/: Cargo.toml
crates/tai-tui/src/: api_key_input.rs  lib.rs  model_selector.rs  provider_config.rs  reasoning.rs  settings.rs  spinner.rs  viewer.rs
src/: ai.rs  main.rs
src/args/: config.rs  do_ask.rs  go.rs  init.rs  model.rs
tai/: Cargo.toml
tai/src/: main.rs
website/: index.html
