[package]
name = "tai-ai"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tai-core = { path = "../tai-core" }
rig-core = "0.28.0"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "time", "fs"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs-next = "2"
tracing = "0.1"
thiserror = "2.0"
