[package]
name = "tai-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time", "json"] }
tracing-appender = "0.2"
thiserror = "2.0"
anyhow = "1.0"
chrono = "0.4"
dirs-next = "2.0"
serde_json = "1.0"
